--- a/.github/workflow/github_ci.yml
+++ b/.github/workflow/github_ci.yml
@@ -1,16 +1,22 @@
 name: Pylint
+on:
+  pull_request:
+    types:
+      - closed
 
-on: [push,merge]
 env:
   PIP_CACHE_DIR: "/$CI_PROJECT_DIR/.cache/pip"
 
 jobs:
-  build:
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
     steps:
+    - run: |
+        echo The PR was merged   
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
