--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,9 +26,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        curl -sSL https://install.python-poetry.org | python3 -
+        poetry install 
+        poetry add flake8
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
