--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.9"
 transformers = "^4.22.1"
 datasets = "^2.5.1"
+black = "^22.8.0"
+dvc = "^2.27.2"
 
 
 [build-system]
