--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ fire = "^0.4.0"
 accelerate = "^0.12.0"
 evaluate = "^0.2.2"
 seqeval = "^1.2.2"
+mlflow = "^1.29.0"
+PyYAML = "^6.0"
 
 
 [build-system]
