--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,12 +7,15 @@ stages:
     outs:
       - data/processed/conll
   train:
-    cmd: python src/featurization.py data/prepared data/features
+    cmd: python -m src.models.train_model data/processed/conll models reports/metrics.json
     deps:
-      - data/prepared
-      - src/featurization.py
-    params:
-      - featurize.max_features
-      - featurize.ngrams
-    outs:
-      - data/features
+      - data/processed/conll
+      - src/models/train_model.py
+      - models
+    metrics:
+      - reports/metrics.json
+#  test:
+#    cmd: python -m src.model.test_model data/processed/conll results/metrics.json
+#    deps:
+#    outs:
+
