--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ seqeval = "^1.2.2"
 mlflow = "^1.29.0"
 PyYAML = "^6.0"
 pytorch-lightning = "1.7.6"
+python-dotenv = "^0.21.0"
+psycopg2 = "^2.9.4"
 
 
 [build-system]
